<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/nav_home" />

        <item
            android:id="@+id/nav_courses"
            android:title="@string/courses"
            android:icon="@drawable/nav_courses" />

        <item
            android:id="@+id/nav_my_questions"
            android:title="@string/my_questions"
            android:icon="@drawable/nav_my_questions" />

        <item
            android:id="@+id/nav_saved_questions"
            android:title="@string/saved_questions"
            android:icon="@drawable/nav_saved_questions" />

        <item
            android:id="@+id/nav_chat"
            android:title="@string/chat"
            android:icon="@drawable/nav_chat" />

        <item
            android:id="@+id/nav_map"
            android:title="@string/map"
            android:icon="@drawable/nav_map" />



    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/settings"
                    android:icon="@drawable/nav_settings" />
                <item
                    android:id="@+id/nav_account"
                    android:title="@string/my_account"
                    android:icon="@drawable/nav_account" />
            </group>
        </menu>

    </item>


</menu>