...
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/not_connected_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_are_not_connected_my_question"
            android:textSize="18sp"
            android:padding="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_still_haven_t_asked_any_question"
            android:textSize="18sp"
            android:padding="16dp"
            android:visibility="gone" />
...
